[package]
name = "rafflesia"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Iyxan23/rafflesia"
readme = "README.md"
description = "A langauge that compiles into sketchware projects"

[lib]
name = "rafflesia"
path = "src/rafflesia/lib.rs"

[[bin]]
name = "rafflesia"
test = false
doc = false

[dependencies]
swrs = { path = "./swrs" }
clap = "^3.1.18"
toml = "^0.5.9"
chrono = "^0.4.19"
serde = { version = "^1.0.137", features = ["derive"] }
serde_derive = "^1.0.137"
anyhow = "^1.0.57"
thiserror = "^1.0.31"
logos = "0.12.0"
log = "0.4.17"