[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafflesia = { path = "../rafflesia" }
clap = "^3.1.13"
anyhow = "^1.0.57"
toml = "^0.5.9"
chrono = "^0.4.19"
#chrono = { version = "^0.4.19", features = ["clock"] }