[package]
name = "padma-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
simple_logger = "4"
log = "0.4"

[dependencies]
buffered-lexer = { path = "../buffered-lexer" }
swrs = { path = "../swrs" }

thiserror = "^1.0.38"
logos = "0.12.1"
chumsky = "1.0.0-alpha.3" # so that i can use the `Rich` error type