[package]
name = "rafflesia-web"
description = "Rafflesia web demo powered by yew and WebAssembly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2.0"
wasm-bindgen = "0.2"
unindent = "0.2.1"

# gass rafflesia
rafflesia = { path = "../rafflesia" }

# swrs depends on `getrandom` but we need to manually enable its `js` feature flag
getrandom = { version = "0.2", features = ["js"] }
serde = "1"

gloo-worker = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Event",
    "HtmlSelectElement"
]