[package]
name = "rafflesia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swrs = { path = "../swrs" }
toml = "^0.5.9"
serde = { version = "^1.0.137", features = ["derive"] }
serde_derive = "^1.0.137"
anyhow = "^1.0.57"
pest = "^2.1.3"
pest_derive = "^2.1.0"
logos = "0.12.0"
log = "0.4.17"